src/objects/Employee__c.object
<CustomObject>
    <fields>
        <fullName>EmployeeName__c</fullName>
        <label>Employee Name</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EmployeeSurname__c</fullName>
        <label>Employee Surname</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>JobPosition__c</fullName>
        <label>Job Position</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Developer</fullName>
                </value>
                <value>
                    <fullName>Tester</fullName>
                </value>
                <value>
                    <fullName>Scrum Master</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Employee</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>E-{0000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Employees</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>